Changed the color of the triangle to green.

--- a/app/views/customer_service/faqs.html.erb
+++ b/app/views/customer_service/faqs.html.erb
@@ -1,7 +1,9 @@
 <h2 class="heading">FREQUENTLY ASKED QUESTIONS</h2>
 <p>See if your question has already been answered below in this list of Frequently Asked Questiions if you don’t find your question here feel free to visit our <strong><a href="">Contact Section</a></strong> and connect with us through our online form. </p>
 
+
 <div class="faq group">
+  <p>Click the arrow beside each question to reveal the answer.</p><br>
   <div class="question">
     <span class="Q">Q.</span><p>How long can I expect a bit to last (how many screws will it drive)?<img class="open-close" id="drop-down-1" src="/products/accessories/triangle.png" alt=""></p>
   </div>
