--- a/app/views/customer_service/product_manuals.html.erb
+++ b/app/views/customer_service/product_manuals.html.erb
@@ -3,6 +3,7 @@
 
 
 <div class="selection tool">
+  <p>Click the arrow beside each question to reveal the answer.</p>
   <a class="backdrop" href="<%= products_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"><img class="icon" src="/customer_service/pdf.png" alt="">
 
   </a>
