--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -1,3 +1,16 @@
+.list-four {
+  margin-top: 50px;
+  .block {
+    width: 25%;
+    float: left;
+  }
+
+  h3 {
+    margin-bottom: 1em;
+    text-align: center;
+  }
+}
+
 .product_registration {
   margin: 50px auto;
   width: 80%;
