--- a/app/assets/stylesheets/products/tools.scss
+++ b/app/assets/stylesheets/products/tools.scss
@@ -17,5 +17,22 @@
   margin-left: 0;
 }
 
+.specialized {
+
+  .half {
+    width: 45%;
+    float: left;
+
+    &:nth-child(even) {
+      margin-left: 10%;
+    }
+
+    h4 {
+      font-size: .9em;
+      font-family: Helvetica-Bold;
+    }
+  }
+}
+
 
 
