Made substantial changes to screws pages.

--- a/app/assets/stylesheets/products/screws.scss
+++ b/app/assets/stylesheets/products/screws.scss
@@ -131,5 +131,16 @@ tr.headers {
 }
 
 
+.screw_pics {
+  img {
+    float: left;
+  }
+
+  img:nth-child(2) {
+    margin-left: 30px;
+  }
+}
+
+
 
 
