Added testimonial page.

--- a/app/views/customer_service/testimonials.html.erb
+++ b/app/views/customer_service/testimonials.html.erb
@@ -1,2 +1,28 @@
-<h1>CustomerService#testimonials</h1>
-<p>Find me in app/views/customer_service/testimonials.html.erb</p>
+<h2 class="heading">TESTIMONIALS</h2>
+  <p>Hear what people are saying about Muro North America. The feedback on our customer service and product quality speaks for itself...</p>
+
+<div class="testimonial group">
+  <img class="display" src="/customer_service/silhouette.png" alt="">
+  <div class="quote">
+    <h3>John Smith</h3>
+    <h4>Leading Industries</h4>
+    <div class="hanging-quote group">
+      <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
+      <p>If you are looking for performance, Muro’s products and customer service are exceptional. I've tried them all, Muro is the best by far.</p>
+      <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
+    </div>
+  </div>
+</div>
+
+<div class="testimonial">
+  <img class="display" src="/customer_service/silhouette.png" alt="">
+  <div class="quote">
+    <h3>Leslie Finch</h3>
+    <h4>The Reputable Company.</h4>
+    <div class="hanging-quote group">
+      <img class="punctuation" src="/customer_service/first-punctuation.png" alt="">
+      <p>Tool is a work horse - watched it tumble down the steps fall in the salt water - dried it out and still using today!" Man, I have lots of tools but my Muro goes to every job.</p>
+      <img class="punctuation last" src="/customer_service/last-punctuation.png" alt="">
+    </div>
+  </div>
+</div>
