--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -8,6 +8,7 @@
   h3 {
     margin-bottom: 1em;
     text-align: center;
+    font-family: 'Helvetica-Bold';
   }
 }
 
@@ -72,6 +73,62 @@ img.icon {
     position: absolute;
     left: 5%;
     top: 65%;
+}
+
+.testimonial {
+  width: 75%;
+  background: #f2f2f2;
+  border: 3px solid $green;
+  border-radius: 5px;
+  padding: 30px;
+  box-sizing: border-box;
+  margin: 50px auto 0;
+  overflow: hidden;
+
+
+  img.display {
+    border: 2px #ccc solid;
+    width: 17%;
+    height: auto;
+  }
+}
+
+.quote {
+  width: 75%;
+  float: right;
+
+  img.punctuation {
+    display: inline-block;
+    width: 7%;
+    height: auto;
+    float: left;
+  }
+
+  img.last {
+    clear: left;
+    float: right;
+  }
+
+  h3 {
+    font-family: "Helvetica-Bold";
+    color: $green;
+    font-size: 1.5em;
+  }
+
+  h4 {
+    font-family: "Helvetica-Bold";
+    color: black;
+    text-transform: uppercase;
+    margin-top: .3em;
+    margin-bottom: 30px;
+  }
+
+  p {
+    margin-top: 40px;
+    display: block;
+    float: left;
+    width: 86%;
+  }
 }
 
 
