Made small style change to tools page.

--- a/app/views/products/tools/_ch7260_specializations.html.erb
+++ b/app/views/products/tools/_ch7260_specializations.html.erb
@@ -1,4 +1,4 @@
 <div class="specialized group">
   <img class="zoom_01 main" src="/products/tools/metal-pro-tool/ch7263-air-tool.jpg" data-zoom-image="/products/tools/metal-pro-tool/ch7263-air-tool-large.jpg" />
-  <h4>Air Tool option</h4>
+  <h4 class="bold center">Air Tool option</h4>
 </div>
