One last change on roofing slide.

--- a/app/views/about/muro_north_america.html.erb
+++ b/app/views/about/muro_north_america.html.erb
@@ -16,7 +16,7 @@
 <div class="stafda group">
   <h3>
     Muro North America Inc. is
-    a proud member of the Speciality Tools &amp; Fasteners Distrubution Association
+    a proud member of the Speciality Tools &amp; Fasteners Distribution Association
   </h3>
 
   <img src="stafda.png" alt="STAFDA logo">
