--- a/app/views/distributors/index.html.erb
+++ b/app/views/distributors/index.html.erb
@@ -1,4 +1,11 @@
-<h2 class="heading">DISTRIBUTORS</h2>
+<div class="stafda distributors group">
+  <img src="/about/stafda.png" alt="STAFDA logo">
+  <h3>
+    Member of the Speciality Tools &amp; Fasteners Distrubution Association
+  </h3>
+</div>
+<h2 class="heading distributors">DISTRIBUTORS</h2>
+
   <p>Select to view our International Distributors for Muro products.</p>
 
 
