--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,9 +35,9 @@
 
 				<div id="find-a-distributor">
 					<ul>
-						<li><a href="find-a-distributor">Find a Distributor</a>
+						<li><a href="distributors">Find a Distributor</a>
 							<ul>
-								<li class="no-margin-top"><a href="">Muro North America</a></li>
+								<li class="no-margin-top"><%= link_to "Find a Distributor", distributors_path %></li>
 								<li><a href="">Muro International</a></li>
 								<li><a href="">Online</a></li>
 							</ul>
