--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -93,6 +93,7 @@
 	}
 
 	.page-content {
+		position: relative;
 		width: 1000px;
 		margin: 0 auto;
 
@@ -549,6 +550,7 @@
 
 	/* Footer */
 	footer {
+		position: relative;
 		background-color: black;
 		padding: 10px 0;
 		margin-top: 75px;
