--- a/app/views/distributors/index.html.erb
+++ b/app/views/distributors/index.html.erb
@@ -1,11 +1,33 @@
 <div class="stafda distributors group">
   <img src="/about/stafda.png" alt="STAFDA logo">
   <h3>
-    Member of the Speciality Tools &amp; Fasteners Distrubution Association
+    Member of the Specialty Tools &amp; Fasteners Distribution Association
   </h3>
 </div>
 <h2 class="heading distributors">DISTRIBUTORS</h2>
 
-  <p>Select to view our International Distributors for Muro products.</p>
+  <p>Select below to view an area of distribution for Muro products.</p>
+
+<section id="select-distributor">
+  <div class="block no-margin-left">
+    <a href="<%= distributors_north_america_path %>"><img src="/distributors/north-america.png" alt="North America Distributors"></a>
+    <h3><%= link_to "North America", distributors_north_america_path %></h3>
+  </div>
+
+  <div class="block">
+    <a href="<%= distributors_international_path %>"><img src="/distributors/world.png" alt="International Distributors"></a>
+    <h3><%= link_to "International", distributors_international_path %></h3>
+  </div>
+
+  <div class="block">
+    <a href="<%= distributors_online_path %>"><img src="/distributors/monitor.png" alt="Online Distributors"></a>
+    <h3><%= link_to "Online", distributors_online_path %></h3>
+  </div>
+
+
+</section>
+
+
+
 
 
