--- a/app/views/distributors/international.html.erb
+++ b/app/views/distributors/international.html.erb
@@ -1,2 +1,166 @@
-<h1>Distributors#international</h1>
-<p>Find me in app/views/distributors/international.html.erb</p>
+<h2 class="heading distributors">International Distributors</h2>
+
+<p>Below is a list of the international distributors for Muro products and their corresponding contact information.</p>
+
+<section class="group">
+  <div class="distributor two-col group no-margin-left">
+    <h3>Australia</h3>
+
+    <div class="location">
+      <p>
+        Iccons Pty Ltd.<br>
+        12-18 Produce Drive<br>
+        Dandenong South,<Br>
+        Victoria 3175<Br>
+      </p>
+
+      <p>
+        Phone: 03 9706 4344<br>
+        Fax: 03 9768 3329<br>
+        Email: sales@iccons.com.au<br>
+        Website: www.iccons.com.au
+      </p>
+    </div>
+
+    <div class="location">
+      <p>
+        Powers Fasteners<Br>
+        3 / 205 Abbotts Road<Br>
+        Dandenong South, <Br>
+        Victoria 3175<Br>
+      </p>
+      <p>
+        Tel: + 61 03 8795 4600 <Br>
+        Fax: + 61 03 8787 5899 <Br>
+        Email: info@powers.com.au<Br>
+        Web: www.powers.com.au<Br>
+      </p>
+    </div>
+  </div>
+
+
+  <div class="distributor">
+    <h3>Netherlands</h3>
+
+    <div class="location">
+      <p>
+        Verpa Senco Nederland B.V.<br>
+        Pascallaan 88<br>
+        Lelystad, 8218NJ<br>
+        The Netherlands<br>
+      </p>
+
+      <p>
+        Tel: + 31 0 320 29 55 55<br>
+        Fax: +31 0 320 29 55 34<br>
+        Email: info@verpa-senco.com<br>
+        Web: www.verpa-senco.com<br>
+      </p>
+    </div>
+  </div>
+
+  <div class="distributor clear no-left">
+    <h3>New Zealand</h3>
+
+    <div class="location">
+    <p>
+      FORTRESS Fasteners<br>
+      562 Rosebank Road<br>
+      Avondale Auckland<br>
+      New Zealand<br>
+    </p>
+
+    <p>
+      Tel: + 64 9 828 2777<br>
+      Fax: + 64 9 828 2424<br>
+      Email: tait@fortressfasteners.co.nz<br>
+      Web: www.fortressfasteners.co.nz
+    <p>
+
+    </div>
+    </p>
+
+  </div>
+
+  <div class="distributor">
+    <h3>United Kingdom</h3>
+
+    <div class="location">
+      <p>
+        Poppers Senco UK Ltd<br>
+        Gemini Business Park Westbrook<br>
+        Warrington WA5 7YH<br>
+        United Kingdom<br>
+      </p>
+
+      <p>
+        Tel: (192) 544-5566 <br>
+        Fax: (192) 541-8873<br>
+        Email:sales@poppers-senco.co.uk<br>
+        Web: www.poppers-senco.co.uk
+      </p>
+    </div>
+  </div>
+
+  <div class="distributor">
+    <h3>Norway</h3>
+
+    <div class="location">
+      <p>
+        Motek AS<Br>
+        Alf Bjerckes vei 22b<Br>
+        0582 Oslo<Br>
+        Norway
+      </p>
+
+      <p>
+        Tel:+ 47 9 824 7476<br>
+        Fax: + 47 2 272 1078<br>
+        Email: firmapost@motek.no<br>
+        Web: www.motek.no
+      </p>
+    </div>
+  </div>
+
+  <div class="distributor no-left clear">
+    <h3>Belgium</h3>
+
+    <div class="location">
+      <p>
+        Cerclindus<br>
+        Uilenbaan 120<br>
+        BE 2160<br>
+        Wommelgem<br>
+        Belgium
+      </p>
+
+      <p>
+        Tel: + 32 3 355 0353<br>
+        Fax: + 32 3 355 0373<br>
+        Email:info@cerclindus.be<br>
+        Web: www.cerclindus.be
+      </p>
+    </div>
+  </div>
+
+  <div class="distributor">
+    <h3>France</h3>
+
+    <div class="location">
+      <p>
+        SARL ERICANA<br>
+        B.P. 130<br>
+        74410 Saint Eustache<br>
+        France
+      </p>
+
+      <p>
+        Tel/Fax: + 33 04 50 32 3105<br>
+        Email: ericana@free.fr<br>
+        Web: www.muro.com
+      </p>
+    </div>
+  </div>
+
+</section>
+
