--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,8 +37,8 @@
 					<ul>
 						<li><a href="distributors">Find a Distributor</a>
 							<ul>
-								<li class="no-margin-top"><%= link_to "Find a Distributor", distributors_path %></li>
-								<li><a href="">Muro International</a></li>
+								<li class="no-margin-top"><%= link_to "North America", distributors_north_america_path %></li>
+								<li><%= link_to "International", distributors_international_path %></li>
 								<li><a href="">Online</a></li>
 							</ul>
 						</li>
