--- a/app/views/distributors/online.html.erb
+++ b/app/views/distributors/online.html.erb
@@ -1,2 +1,9 @@
-<h1>Distributors#online</h1>
-<p>Find me in app/views/distributors/online.html.erb</p>
+<h2 class="heading distributors">International Distributors</h2>
+
+<p>Below is a list of the international distributors for Muro products and their corresponding contact information.</p>
+
+<section class="group">
+  <div class="distributor two-col group no-margin-left">
+    <a href="http://www.wholesalepowertools.com/"><img src="/distributors/whole-sale.png" alt="Wholesale Distributors"></a>
+  </div>
+</section>
