--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,13 @@
   <title>Muro North America</title>
 
   <%= stylesheet_link_tag    'application', media: 'all' %>
+
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-    <script src="slider/amazingslider.js"></script>
-    <script src="slider/initslider-1.js"></script>
+    <script src="/slider/amazingslider.js"></script>
+    <script src="/slider/initslider-1.js"></script>
+    <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
+		<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
 </head>
 <body>
 
@@ -39,7 +42,7 @@
 							<ul>
 								<li class="no-margin-top"><%= link_to "North America", distributors_north_america_path %></li>
 								<li><%= link_to "International", distributors_international_path %></li>
-								<li><a href="">Online</a></li>
+								<li><%= link_to "Online", distributors_online_path %></li>
 							</ul>
 						</li>
 					</ul>
