Updated path for distributors.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
 				<div id="find-a-distributor">
 					<ul>
-						<li><a href="distributors">Find a Distributor</a>
+						<li><%= link_to "Find a Distributor", distributors_path %>
 							<ul>
 								<li class="no-margin-top"><%= link_to "North America", distributors_north_america_path %></li>
 								<li><%= link_to "International", distributors_international_path %></li>
