Updated path for distributors.

--- a/app/views/customer_service/product_manuals.html.erb
+++ b/app/views/customer_service/product_manuals.html.erb
@@ -4,47 +4,46 @@
 
 <div class="selection tool">
 
-  <a class="backdrop" href="<%= products_tool_path(:id=>1) %>"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"><img class="icon" src="/customer_service/pdf.png" alt="">
-
+  <a class="backdrop" href="/customer_service/product_manuals/CH7390-Manual.pdf" target="_blank"><img src="/products/tools/index/ultra-driver.png" alt="CH7390 - Ultra Driver"><img class="icon" src="/customer_service/pdf.png" alt="">
   </a>
-  <%= link_to "CH7390 - Ultra Driver", products_tool_path(:id=>1) %>
+  <%= link_to "CH7390 - Ultra Driver", "/customer_service/product_manuals/CH7390-Manual.pdf", :target=>"_blank" %>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>2) %>"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "CH7241 -  Easy Driver", products_tool_path(:id=>2)  %>
+  <a class="backdrop" href="/customer_service/product_manuals/CH7241-Manual.pdf" target="_blank"><img src="/products/tools/index/easy-driver.png" alt="CH7241 -  Easy Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "CH7241 -  Easy Driver", "/customer_service/product_manuals/CH7241-Manual.pdf", :target=>"_blank"%>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>3) %>"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "CH7260 - Metal Pro", products_tool_path(:id=>3) %>
+  <a class="backdrop" href="/customer_service/product_manuals/CH7260-Manual.pdf" target="_blank"><img src="/products/tools/index/metal-pro-tool.png" alt="CH7260 - Metal Pro Tool"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "CH7260 - Metal Pro", "/customer_service/product_manuals/CH7260-Manual.pdf", :target=>"_blank" %>
 </div>
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>4) %>"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "FLVL41 - Power Driver", products_tool_path(:id=>4) %>
-</div>
-
-<div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>5) %>"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "FDVL41 - Speed Driver", products_tool_path(:id=>5) %>
+  <a class="backdrop" href="/customer_service/product_manuals/FDVL41-FLVL41-Manual.pdf" target="_blank"><img src="/products/tools/index/power-driver.png" alt="FLVL41 - Power Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "FLVL41 - Power Driver", "/customer_service/product_manuals/FDVL41-FLVL41-Manual.pdf", :target=>"_blank" %>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>6) %>"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "HDVL71 - Heavy Duty Driver",  products_tool_path(:id=>6) %>
+  <a class="backdrop" href="/customer_service/product_manuals/FDVL41-FLVL41-Manual.pdf" target="_blank"><img src="/products/tools/index/speed-driver.png" alt="FDVL41 - Speed Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "FDVL41 - Speed Driver", "/customer_service/product_manuals/FDVL41-FLVL41-Manual.pdf", :target=>"_blank" %>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>7) %>"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "LWVL32 - Coil Auto Feed System", products_tool_path(:id=>7) %>
+  <a class="backdrop" href="/customer_service/product_manuals/HDVL71-Manual.pdf" target="_blank"><img src="/products/tools/index/heavy-duty-driver.png" alt="HDVL71 - Heavy Duty Driver"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "HDVL71 - Heavy Duty Driver",  "/customer_service/product_manuals/HDVL71-Manual.pdf", :target=>"_blank" %>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>8) %>"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "LHVL32 - Coil Hex Auto Feed System", products_tool_path(:id=>8) %>
+  <a class="backdrop" href="/customer_service/product_manuals/LWVL32-Manual.pdf" target="_blank"><img src="/products/tools/index/lwvl32.png" alt="LWVL32 - Coil Hex Auto Feed System"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "LWVL32 - Coil Auto Feed System", "/customer_service/product_manuals/LWVL32-Manual.pdf", :target=>"_blank" %>
 </div>
 
 <div class="selection tool">
-  <a class="backdrop" href="<%= products_tool_path(:id=>9) %>"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
-  <%= link_to "VL62 - Series of Tools", products_tool_path(:id=>9) %>
+  <a class="backdrop" href="/customer_service/product_manuals/LHVL32-Manual.pdf" target="_blank"><img src="/products/tools/index/lhvl32.png" alt="LHVL32 - Coil Auto Feed"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "LHVL32 - Coil Hex Auto Feed System", "/customer_service/product_manuals/LHVL32-Manual.pdf", :target=>"_blank" %>
+</div>
+
+<div class="selection tool">
+  <a class="backdrop" href="/customer_service/product_manuals/-Manual.pdf" target="_blank"><img src="/products/tools/index/vl62.png" alt="VL62 - Series of Tools"><img class="icon" src="/customer_service/pdf.png" alt=""></a>
+  <%= link_to "VL62 - Series of Tools", "/customer_service/product_manuals/CH7390-Manual.pdf", :target=>"_blank" %>
 </div>
