--- a/app/views/customer_service/index.html.erb
+++ b/app/views/customer_service/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="heading">CUSTOMER SERVICE</h2>
+<h1 class="index heading">CUSTOMER SERVICE</h1>
   <p>Select one of the following options below. If you would like to get in touch with us directly: <a href="<%= contact_path %>">Contact Us</a></p>
 
 <section class="list-four">
