--- a/app/views/distributors/index.html.erb
+++ b/app/views/distributors/index.html.erb
@@ -4,7 +4,7 @@
     Member of the Specialty Tools &amp; Fasteners Distribution Association
   </h3>
 </div>
-<h2 class="heading distributors">DISTRIBUTORS</h2>
+<h1 class="index heading distributors">DISTRIBUTORS</h1>
 
   <p>Select below to view an area of distribution for Muro products.</p>
 
