--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <script src="/slider/amazingslider.js"></script>
     <script src="/slider/initslider-1.js"></script>
     <script src="//maps.google.com/maps/api/js?v=3.13&amp;sensor=false&amp;libraries=geometry" type="text/javascript"></script>
-		<script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script>
+	<!-- 	 <script src='//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js' type='text/javascript'></script> -->
 </head>
 <body>
 
@@ -96,10 +96,10 @@
 					<li><%= link_to "Testimonials", customer_service_testimonials_path %></li>
 				</ul>
 			</li>
-			<li class="downloads"><a href="downloads">DOWNLOADS</a>
+			<li class="downloads"><%= link_to "DOWNLOADS", downloads_path %>
 				<ul>
-					<li class="no-margin-top"><a href="">Brochures</a></li>
-					<li><a href="">Videos</a></li>
+					<li class="no-margin-top"><%= link_to "Brochures", downloads_brochures_path %></li>
+					<li><%= link_to "Videos", downloads_videos_path %></li>
 				</ul>
 			</li>
 		</ul>
