--- a/app/assets/stylesheets/downloads.scss
+++ b/app/assets/stylesheets/downloads.scss
@@ -1,10 +1,36 @@
 .videos .block {
   width: 18.4%;
-  margin-left: 21.06667%;
 
+  &:first-child {
+    margin-right: 21.06667%;
+  }
 }
 
 //-------------------------
-// Brochures
+// Videos
 //-------------------------
 
+#videos {
+  margin-top: 50px;
+}
+
+.video {
+  width: 47.5%;
+  float: left;
+
+  &:nth-child(odd) {
+    margin-right: 5%;
+    clear: left;
+  }
+
+  iframe {
+    width: 100%;
+    height: 300px;
+    margin-bottom: 20px;
+  }
+
+  h4 {
+    font-family: 'Helvetica-Bold';
+    text-align: center;
+  }
+}
