--- a/app/views/distributors/north_america.html.erb
+++ b/app/views/distributors/north_america.html.erb
@@ -1,3 +1,5 @@
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
 <h2 class="heading distributors">North American Distributors</h2>
 
 <div class="muro-address">
@@ -18,27 +20,14 @@
 </div>
 
 
-<div id="map"></div>
+<div id="map">
+  <a class="google-map-code" href="http://wordpress-hosting.me" id="get-map-data">wordpress-hosting.me</a></div>
+</div>
 
-<script>
-  handler = Gmaps.build('Google');
-handler.buildMap({ provider: {zoom: 3}, internal: {id: 'map'}}, function(){
-  markers = handler.addMarkers([
-    {
-      "lat": 43.69928,
-      "lng": -79.72718,
-      "zoom": 1,
-      "picture": {
-        "url": "https://cdn2.iconfinder.com/data/icons/metro-uinvert-dock/256/Google_Maps.png",
-        "width":  36,
-        "height": 36
-      },
-      "infowindow": "hello!"
-    }
-  ]);
-  handler.bounds.extendWith(markers);
-  handler.fitMapToBounds();
-});
-</script>
+
+
+
+
+<script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(43.6992805,-79.7271844),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("map"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(43.6992805, -79.7271844)});infowindow = new google.maps.InfoWindow({content:"<b>Muro North America</b><br/>7 Tilbury Court, Brampton<br/> Ontario" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
 
 
