--- a/app/views/downloads/videos.html.erb
+++ b/app/views/downloads/videos.html.erb
@@ -1,2 +1,20 @@
-<h1>Downloads#videos</h1>
-<p>Find me in app/views/downloads/videos.html.erb</p>
+<h2 class="heading">VIDEOS</h2>
+
+<p>Below are the videos displaying Muro’s signature products in action. Click the images to view the videos. Be sure to visit our <strong><a href="http://www.youtube.com/">YouTube page</a></strong> and and <strong><a href="http://www.youtube.com/">subscribe</a></strong> to stay up to date with Muro product innovations.</p>
+
+<section id="videos">
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/1dYX4F3YTKE" frameborder="0" allowfullscreen></iframe>
+
+    <h4>What Trades Want - Muro Product Review</h4>
+    <p>The boys over at What Trades Want did a review of our collated auto-feed screw guns in action. They test out a couple of our tools to see how they perform in a variety of applications.</p>
+  </div>
+
+  <div class="video">
+    <iframe src="https://www.youtube.com/embed/QMI3z1PjxKA" frameborder="0" allowfullscreen></iframe>
+    <h4>Deck Builder - Muro Product Review</h4>
+    <p>Andy Wormer with Professional Deck Builder magazine talks with us about Muro's auto feed screw driving system. Here we demonstrate the coil and strip feed systems that are designed for countless applications.</p>
+  </div>
+</section>
+
+
