Added jQuery selection functinality to VL62 manuals on Manuals page.

--- a/app/assets/stylesheets/buttons.scss
+++ b/app/assets/stylesheets/buttons.scss
@@ -39,3 +39,11 @@
     width: 300px !important;
     margin:20px 0 40px !important;
   }
+
+  .popup {
+    float: left;
+    clear: none;
+    display: block;
+    width: 22%;
+    margin: 40px 0 0 4%;
+  }
