Finished contact page.

--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,3 +1,92 @@
-// Place all the styles related to the contact controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+#contact-left {
+  width: 35%;
+  float: left;
+
+  .distributor {
+    float: none;
+    width: 100%;
+    margin-top: 30px;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+
+  .location {
+    margin-left: 0;
+  }
+
+  h3 {
+    border: none;
+    text-align: left;
+  }
+
+  p {
+    margin-left: 0;
+  }
+}
+
+#contact-form {
+  float: right;
+  width: 55%;
+
+  h3 {
+    font-family: 'Helvetica-Roman';
+    font-size: 1.5em;
+  }
+
+  .basic-form {
+    width: 100%;
+    margin-top: 20px;
+
+    option {
+      padding: 10px 0;
+    }
+  }
+}
+
+.subscribe-box {
+  background: #252525;
+  width: 100%;
+  box-sizing: border-box;
+  border: thick $green solid;
+  border-radius: 5px;
+  padding: 30px;
+  margin-top: 30px;
+
+  .input {
+    width: 80%;
+    margin: 30px 0 0 10%;
+    float: none;
+  }
+  input {
+    border: 2px solid $green;
+    box-sizing: border-box;
+  }
+
+  input[type=submit] {
+    padding:10px 15px 5px; background:$green; border:0 none;
+    cursor:pointer;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    font-family: 'Helvetica-Bold';
+    margin-top: 30px;
+
+    &:hover {
+      background:$darkgrey;
+      color: $green;
+    }
+  }
+
+  h3 {
+    font-family: 'Helvetica-Bold';
+    font-size: 1.1em;
+    text-align: center;
+    display: inline;
+    color: white;
+  }
+
+  input {
+    font-size: 1em;
+  }
+}
