--- a/app/assets/stylesheets/customer_service.scss
+++ b/app/assets/stylesheets/customer_service.scss
@@ -12,26 +12,18 @@
   }
 }
 
-.product_registration {
+.basic-form {
   margin: 50px auto;
   width: 80%;
 }
 
-  .comments {
-    display: block;
-    width: 100%;
-    clear: both;
-    margin-bottom: 30px;
 
-    label {
-      display: block;
-    }
-  }
 
 .input {
   float: left;
   width: 45%;
   margin: 30px 0 0 10%;
+
 
   label {
     display: block;
@@ -42,6 +34,7 @@
   input, select {
     font-size: 1.3em;
     width: 100%;
+    box-sizing: border-box;
   }
 
 
@@ -51,13 +44,30 @@
   }
 }
 
+.comments {
+  display: block;
+  width: 100%;
+  clear: both;
+  margin-bottom: 30px;
+  // box-sizing: border-box;
+  // border: 1px solid black;
+
+
+  textarea {
+    box-sizing: border-box;
+    width: 100%;
+  }
+
+  label {
+    display: block;
+  }
+}
+
 .submit {
   clear: both;
   display: block;
   width: 50%;
-  margin: 100px auto 0;
-  position: relative;
-  top: 30px;
+  margin: 50px auto 0;
 
   font-size: 2em;
 }
