--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,2 +1,112 @@
-<h1>Contact#index</h1>
-<p>Find me in app/views/contact/index.html.erb</p>
+<h2 class="heading">CONTACT</h2>
+
+<section id="contact-left">
+  <div class="distributor group no-margin-left">
+    <h3>Muro North America</h3>
+
+    <div class="location">
+      <p>
+        Muro North America Inc.<br>
+        7 Tilbury Court <br>
+        Brampton, ON, Canada <br>
+        L6T 3T4
+      </p>
+
+      <p>
+        Tel: 905-451-7667<br>
+        Fax: 905-451-7936<br>
+        Toll Free: 1-800-665-MURO (6876)<br>
+      </p>
+    </div>
+  </div>
+
+  <div class="distributor group no-margin-left">
+    <h3>Muro Corporation</h3>
+    <div class="location">
+      <p>
+        1-4-10 Kaminoge, Setagaya-ku<br>
+        Tokyo, Japan   158-0093<br>
+        Tel: 81 (03) 3703-4122<br>
+        Fax: 81 (03) 3704-2348
+      </p>
+    </div>
+  </div>
+
+  <form class="subscribe-box">
+    <h3>Subscribe to Muro's Mailing List</h3>
+
+    <div class="input">
+      <input type="text" name="name" placeholder="Name">
+    </div>
+
+    <div class="input">
+      <input type="email" name="email" placeholder="Email">
+    </div>
+
+    <div class="">
+      <input class="submit" type="submit" value="Subscribe">
+    </div>
+  </form>
+</section>
+
+<section id="contact-form" class="group">
+  <h3>SEND US A MESSAGE</h3>
+  <form action="" class="basic-form group">
+  <div class="input">
+    <label for="first_name">Name *</label>
+    <input type="text" name="first_name">
+  </div>
+
+  <div class="input">
+    <label for="last_name">Email Address *</label>
+    <input type="text" name="initial">
+  </div>
+
+  <div class="input">
+    <label for="company">Company *</label>
+    <input type="text" name="company">
+  </div>
+
+  <div class="input">
+    <label for="model">Product Interest</label>
+    <select class="model-number" name="countries">
+        <option value="<%= nil %>">-- Please Select a Tool Model --
+      <% @tools.each do |tool| %>
+        <option value="<%= tool.product_code %>"><%= tool.product_code %></option>
+      <% end %>
+    </select>
+  </div>
+
+  <div class="input">
+    <label for="last_name">City *</label>
+    <input type="text" name="initial">
+  </div>
+
+  <div class="input">
+    <label for="province_or_state">Province / State *</label>
+    <input type="text" name="province_or_state">
+  </div>
+
+  <div class="input">
+    <label for="country">Country *</label>
+    <select id="countries" name="countries">
+      <%= render '/customer_service/countries' %>
+    </select>
+  </div>
+
+  <div class="input">
+    <label for="phone_number">Phone Number</label>
+    <input type="text" name="phone_number">
+  </div>
+
+  <div class="input comments">
+    <label for="comments">Comments</label>
+    <textarea rows="8" cols="100"></textarea>
+  </div>
+
+  <div class="">
+    <input class="submit" type="submit" value="Submit">
+  </div>
+</form>
+</section>
+
