--- a/app/views/customer_service/product_registration.html.erb
+++ b/app/views/customer_service/product_registration.html.erb
@@ -1,7 +1,7 @@
 <h2 class="heading">PRODUCT REGISTRATION</h2>
   <p>Please complete the form to register your product and activate your product warranty.</p>
 
-<form action="" class="product_registration group">
+<form action="" class="basic-form group">
   <div class="input">
     <label for="first_name">First Name *</label>
     <input type="text" name="first_name">
