--- a/app/views/distributors/north_america.html.erb
+++ b/app/views/distributors/north_america.html.erb
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
-<h2 class="heading distributors">North American Distributors</h2>
+<h2 class="heading">North American Distributors</h2>
 
 <div class="muro-address">
   <h3>Muro North America Inc.</h3>
@@ -21,7 +21,7 @@
 
 
 <div id="map">
-  <a class="google-map-code" href="http://wordpress-hosting.me" id="get-map-data">wordpress-hosting.me</a></div>
+  <a class="google-map-code" href="http://wordpress-hosting.me" id="get-map-data"></a></div>
 </div>
 
 
