--- a/app/views/contact/find_us.html.erb
+++ b/app/views/contact/find_us.html.erb
@@ -1,2 +1,31 @@
-<h1>Contact#find_us</h1>
-<p>Find me in app/views/contact/find_us.html.erb</p>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+<h2 class="heading">FIND US</h2>
+
+<div class="muro-address">
+  <h3>Muro North America Inc.</h3>
+
+  <p><strong>
+    Muro North America Inc.<br>
+    7 Tilbury Court<br>
+    Brampton, ON<br>
+    L6T 3T4
+  </strong></p>
+
+  <p>
+    Our Muro North America Inc. Headquarters is
+    located just off hwy 410, northwest of Toronto in
+    Brampton, Ontario.
+  </p>
+</div>
+
+
+<div id="map">
+  <a class="google-map-code" href="http://wordpress-hosting.me" id="get-map-data"></a></div>
+</div>
+
+
+
+
+
+<script type="text/javascript"> function init_map(){var myOptions = {zoom:15,center:new google.maps.LatLng(43.6992805,-79.7271844),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("map"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(43.6992805, -79.7271844)});infowindow = new google.maps.InfoWindow({content:"<b>Muro North America</b><br/>7 Tilbury Court, Brampton<br/> Ontario" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});}google.maps.event.addDomListener(window, 'load', init_map);</script>
