--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,8 +29,8 @@
 				<h2 style="display:none">THE ORIGINATORS OF AUTO-FEED <br>CONTINUE TO DRIVE INNOVATION</h2>
 
 				<ul class="contact-findus">
-					<li class="contact"><a href="contact">Contact</a></li>
-					<li class="find-us"><a href="find-us">Find Us</a></li>
+					<li class="contact"><%= link_to "Contact", contact_path %></li>
+					<li class="find-us"><%= link_to "Find Us", contact_find_us_path %></li>
 
 				</ul>
 
